add publish to none

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,6 +3,8 @@ description: Dart library for tbDEX.
 version: 1.0.0
 repository: https://github.com/TBD54566975/tbdex-dart
 
+publish_to: none
+
 environment:
   sdk: ^3.1.4
 
