feat: add validation (#4)
* add `tbdex` submodule

* add `json_schema` and `path` deps

* remove unused pattern

* generate id using `TypeId`

* use `JsonSchema`

* add `Validator`

* progress on `verifyOfferingRequirements()`

* fix validation errors

* remove print

* fix serialization issue with `requiredPaymentDetails` json schema

* add `decimal` dep

* add `orElse` to `firstWhere()`

* add more exception handling to `verifyOfferingRequirements()`

* change description in `having()`

* add todo about explicit parsing

* update `getOffering()` and `getRfq()` to test `verifyOfferingRequirements()`

* add tests for `verifyOfferingRequirements()`

* refactor `initialize()`

* use `json` as variable name for `jsonEncode()`

* update `tbdex` submodule

* use private instance to initialize validator

* add just command to copy json-schemas from tbdex submodule

* remove initialize validator

* check in json schemas from tbdex submodule

* update path to new json-schemas folder

* add get, test, and analyze

* delete issue template

* add ci workflow

* update exception message

* use `@` for all commands

* update ci steps

* add dart to hermit

* fix property access on `dynamic`

* add publish to none

* move private constructor

* fix metadata casts

* remove unused constructor

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,11 +3,16 @@ description: Dart library for tbDEX.
 version: 1.0.0
 repository: https://github.com/TBD54566975/tbdex-dart
 
+publish_to: none
+
 environment:
   sdk: ^3.1.4
 
 dependencies:
   crypto: ^3.0.3
+  decimal: ^2.3.3
+  json_schema: ^5.1.3
+  path: ^1.9.0
   typeid: ^1.0.1
   web5:
     git:
