--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,9 @@ environment:
 dependencies:
   crypto: ^3.0.3
   decimal: ^2.3.3
+  http: ^1.2.0
   json_schema: ^5.1.3
+  mocktail: ^1.0.3
   path: ^1.9.0
   typeid: ^1.0.1
   web5:
